--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
     sdk: flutter
   scoped_model: ^0.3.0
   camera: ^0.5.6+3
+  http: ^0.12.0+2
+  utf: ^0.9.0+5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
