--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  fonts:
+    - family: KouzanBrushFontSousyo
+      fonts:
+        - asset: fonts/KouzanBrushFontSousyo.ttf
+    - family: aoyagi
+      fonts:
+        - asset: fonts/aoyagi.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
