--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   camera: ^0.5.6+3
   http: ^0.12.0+2
   utf: ^0.9.0+5
+  assets_audio_player: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,6 +43,8 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+  assets:
+    - audio/
   uses-material-design: true
   fonts:
     - family: KouzanBrushFontSousyo
