add title back ground

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ flutter:
   # the material Icons class.
   assets:
     - audio/
+    - images/
   uses-material-design: true
   fonts:
     - family: KouzanBrushFontSousyo
