--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   http: ^0.12.0+2
   utf: ^0.9.0+5
   assets_audio_player: ^1.0.1
+  geolocator: ^5.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
